apps/immich/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      enableServiceLinks: false
      containers:
        - name: server
          image: ghcr.io/immich-app/immich-server:release
          ports:
            - containerPort: 2283
          volumeMounts:
            - name: upload
              mountPath: /data
            - name: pictures
              mountPath: /mnt/media/personligt
              readOnly: true
          resources:
            limits:
              memory: 2Gi
              cpu: "2"
            requests:
              memory: 512Mi
              cpu: "10m"
      volumes:
        - name: upload
          persistentVolumeClaim:
            claimName: immich-upload
        - name: pictures
          persistentVolumeClaim:
            claimName: immich-pictures
