apps/immich/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-db
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-db
  template:
    metadata:
      labels:
        app: immich-db
    spec:
      enableServiceLinks: false
      containers:
        - name: postgres
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
            - name: dshm
              mountPath: /dev/shm
          resources:
            limits:
              memory: 1Gi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "10m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: immich-db-data
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: immich-db
  namespace: immich
spec:
  selector:
    app: immich-db
  ports:
    - port: 5432
      targetPort: 5432
