apps/immich/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-redis
  template:
    metadata:
      labels:
        app: immich-redis
    spec:
      enableServiceLinks: false
      containers:
        - name: redis
          image: docker.io/valkey/valkey:8-alpine
          ports:
            - containerPort: 6379
          resources:
            limits:
              memory: 256Mi
              cpu: "250m"
            requests:
              memory: 64Mi
              cpu: "10m"
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  namespace: immich
spec:
  selector:
    app: immich-redis
  ports:
    - port: 6379
      targetPort: 6379
